--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
+  min-width: clamp(320px, 100%, 1200px);
   min-height: 100vh;
 }
 
